added SEO in index.html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,10 @@
   <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY4xyJ78qa3SLH14_balkHCne6p-gqSQNWuw&s" title="enactus" />
   
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  
+  <meta name="description" content="Official website of Enactus MNNIT 2025 - Student-led social entrepreneurship and innovation at MNNIT Allahabad." />
+  <meta name="keywords" content="Enactus MNNIT, Social Entrepreneurship, Student Projects, Innovation, MNNIT Allahabad" />
+  <meta name="google-site-verification" content="pLFAS3r872HbTz0FCNAjNrEDJlgfLqLdu_hARaqBVdA" />
 
   <title>Enactus MNNIT</title>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
