feat: enhance SEO and meta tags across the application
- Added react-helmet-async for improved SEO management.
- Implemented SEO component for dynamic meta tags in Home, About, Project, ECart, Selection, and Web pages.
- Updated package.json and package-lock.json to include react-helmet-async dependency.
- Created seoConfig.js for centralized SEO configuration.
- Added robots.txt and sitemap.xml for better search engine indexing.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,16 +6,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY4xyJ78qa3SLH14_balkHCne6p-gqSQNWuw&s" title="enactus" />
   
-  <meta name="theme-color" content="#000000" />
+  <!-- Theme Colors -->
+  <meta name="theme-color" content="#1f2937" />
+  <meta name="msapplication-TileColor" content="#1f2937" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Enactus MNNIT" />
   
-  <meta name="description" content="Official website of Enactus MNNIT 2025 - Student-led social entrepreneurship and innovation at MNNIT Allahabad." />
-  <meta name="keywords" content="Enactus MNNIT, Social Entrepreneurship, Student Projects, Innovation, MNNIT Allahabad" />
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Enactus MNNIT Allahabad - Empowering communities through entrepreneurial action. Student-led social entrepreneurship and innovation at MNNIT Allahabad." />
+  <meta name="keywords" content="Enactus MNNIT, Social Entrepreneurship, Student Projects, Innovation, MNNIT Allahabad, Social Impact, Sustainable Development, Community Empowerment" />
+  <meta name="author" content="Enactus MNNIT Allahabad" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Enactus MNNIT Allahabad - Empowering Communities Through Innovation" />
+  <meta property="og:description" content="Join Enactus MNNIT Allahabad in creating positive social impact through entrepreneurial action. Discover our projects: Neer, Samvesh, Moonj, and Sahyog." />
+  <meta property="og:image" content="https://enactus-mnnit2k25.netlify.app/assets/logo/Enactus.png" />
+  <meta property="og:url" content="https://enactus-mnnit2k25.netlify.app" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Enactus MNNIT Allahabad" />
+  <meta property="og:locale" content="en_US" />
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Enactus MNNIT Allahabad - Empowering Communities Through Innovation" />
+  <meta name="twitter:description" content="Join Enactus MNNIT Allahabad in creating positive social impact through entrepreneurial action." />
+  <meta name="twitter:image" content="https://enactus-mnnit2k25.netlify.app/assets/logo/Enactus.png" />
+  <meta name="twitter:creator" content="@EnactusMNNIT" />
+  <meta name="twitter:site" content="@EnactusMNNIT" />
+  
+  <!-- Verification -->
   <meta name="google-site-verification" content="pLFAS3r872HbTz0FCNAjNrEDJlgfLqLdu_hARaqBVdA" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://enactus-mnnit2k25.netlify.app" />
 
-  <title>Enactus MNNIT</title>
+  <title>Enactus MNNIT Allahabad - Empowering Communities Through Innovation</title>
+  
+  <!-- Preconnect to external domains -->
+  <link rel="preconnect" href="https://unpkg.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <!-- Scripts -->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Enactus MNNIT Allahabad",
+    "url": "https://enactus-mnnit2k25.netlify.app",
+    "logo": "https://enactus-mnnit2k25.netlify.app/assets/logo/Enactus.png",
+    "description": "Student-led social entrepreneurship organization at MNNIT Allahabad empowering communities through entrepreneurial action.",
+    "foundingDate": "2015",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "contact@enactusmnnit.org",
+      "contactType": "General Inquiry"
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Prayagraj",
+      "addressRegion": "Uttar Pradesh",
+      "addressCountry": "India"
+    },
+    "sameAs": [
+      "https://www.instagram.com/enactusmnnit",
+      "https://www.linkedin.com/company/enactus-mnnit",
+      "https://www.facebook.com/enactusmnnit"
+    ]
+  }
+  </script>
 </head>
 
 <body>
